# Anisodactyl

./: .gitignore  .runrc  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/anisodactyl/: __init__.py  crud.py  example.py
src/anisodactyl/crud/: _protocols.py  base.py  sqlalchemy.py  sqlalchemy.pyi
src/anisodactyl/query/: _protocols.py  anisodactyl.py  base.py  django.py  sqlalchemy.py
src/anisodactyl/router/: _protocols.py  fastapi.py
tests/: conftest.py  mocks.py  test_crud.py  test_protocols.py  test_query.py  test_router.py
tests/app/: models.py  routes.py  schemas.py
tests/crud/: test_sqlalchemy.py  test_sqlalchemy_mutation.py
tests/query/: test_anisodactyl.py  test_django.py
tests/router/: test_fastapi.py  test_fastapi_mutation.py
