# █▀█ █▀█ █▀█ ░░█ █▀▀ █▀▀ ▀█▀   █▀▄ █▀▀ ▀█▀ ▄▀█ █ █░░ █▀
# █▀▀ █▀▄ █▄█ █▄█ ██▄ █▄▄ ░█░   █▄▀ ██▄ ░█░ █▀█ █ █▄▄ ▄█
# ======================================================

[project]
name = "anisodactyl"
version = "0.0.1"
authors = [ { name="MidHunterX" } ]
description = "One CRUD to rule them all"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
# `pip install -e .` to install package + dependencies
dependencies = [
    "sqlalchemy[asyncio]",
    "pydantic",
    "fastapi",
]

[project.optional-dependencies]
# `pip install -e .[test]` to install package + dependencies + test
test = [ "pytest", "pytest-asyncio", "aiosqlite", "httpx" ]
dev = [ "anisodactyl[test]" ]

[project.urls]
Homepage = "https://github.com/MidHunterX/Anisodactyl"
Issues = "https://github.com/MidHunterX/Anisodactyl/issues"

# █▄▄ █░█ █ █░░ █▀▄
# █▄█ █▄█ █ █▄▄ █▄▀
# =================

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [ "venv/", ".venv/", "env/", ".env/" ]
