# █▀█ █▀█ █▀█ ░░█ █▀▀ █▀▀ ▀█▀   █▀▄ █▀▀ ▀█▀ ▄▀█ █ █░░ █▀
# █▀▀ █▀▄ █▄█ █▄█ ██▄ █▄▄ ░█░   █▄▀ ██▄ ░█░ █▀█ █ █▄▄ ▄█
# ======================================================

[project]
name = "anisodactyl"
version = "0.0.1"
authors = [ { name="MidHunterX" } ]
description = "One CRUD to rule them all"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
# `pip install -e .` to install package + dependencies
dependencies = [
    "sqlalchemy[asyncio]",
    "pydantic",
    "fastapi",
]

[project.optional-dependencies]
# ------------------------------- CORE PACKAGES -------------------------------
    test = [
        "pytest",           # Standard testing framework
        "pytest-asyncio",   # pytest async support
        "aiosqlite",        # Async SQLite
        "httpx",            # HTTP client for routers
    ]
    dev = [ "anisodactyl[test]" ]
# ------------------------------ EXTRA PACKAGES ------------------------------
    nice = [
        "pytest-sugar",     # Colorful progress bars
        "pytest-clarity",   # Coloured diff (-vv only)
        # "pytest-pretty",  # Table of failures (conflicts with progress bars)
    ]
    fancy = [
        # Modern pytest UI - stdout/stderr, syntax highlighting, icons, error
        # breakdowns etc. Overrides `pytest-sugar` and `pytest-clarity`
        "pytest-modern",
    ]
# ----------------------------------------------------------------------------

[project.urls]
Homepage = "https://github.com/MidHunterX/Anisodactyl"
Issues = "https://github.com/MidHunterX/Anisodactyl/issues"

# █▄▄ █░█ █ █░░ █▀▄
# █▄█ █▄█ █ █▄▄ █▄▀
# =================

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [ "venv/", ".venv/", "env/", ".env/" ]
